--- a/platformio.ini
+++ b/platformio.ini
@@ -31,6 +31,7 @@ board_build.embed_txtfiles =
     src/pages/about.html
     src/pages/portmap_start.html
     src/pages/portmap_end.html
+    src/pages/temperature.html
     src/pages/jquery-8a1045d9cbf50b52a0805c111ba08e94.js
 
 platform = espressif32
