--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,4 +18,5 @@ target_add_binary_data(${COMPONENT_TARGET} "pages/otalog.html" TEXT)
 target_add_binary_data(${COMPONENT_TARGET} "pages/about.html" TEXT)
 target_add_binary_data(${COMPONENT_TARGET} "pages/portmap_start.html" TEXT)
 target_add_binary_data(${COMPONENT_TARGET} "pages/portmap_end.html" TEXT)
+target_add_binary_data(${COMPONENT_TARGET} "pages/temperature.html" TEXT)
 target_add_binary_data(${COMPONENT_TARGET} "pages/jquery-8a1045d9cbf50b52a0805c111ba08e94.js" TEXT)
